# arrays

./: CMakeLists.txt  README.md
include/: csc232.h  task01.h  task02.h  task03.h
src/main/cpp/: demo.cpp  main.cpp  task01.cpp  task02.cpp  task03.cpp
src/main/resources/: task02_data.txt
src/test/cpp/: unit_tests.cpp
src/test/resources/: test_task02_data.txt
